# Inertia-1

./: .gitignore  README.md  motion_dataloader.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
docs/: index.html
docs/paper/: index.html
docs/paper/static/css/: styles.css
docs/paper/static/js/: main.js
docs/static/css/: landing.css
docs/static/js/: landing.js
inertia1/: run.py
inertia1/augmentations/: patchtst.py
inertia1/config/: default.yaml
inertia1/config/methods/: ar_transformer.yaml  patchtst.yaml
inertia1/config/presets/: large.yaml  medium.yaml  small.yaml
inertia1/data/: __init__.py  accel_dataset.py  datamodule.py  patient_dataset.py  sensor_config.py
inertia1/eval/: motion_linear_probe.py  motion_split_analysis.py
inertia1/methods/: ar_transformer.py  ar_transformer_module.py  common.py  patchtst.py  patchtst_module.py  registry.py
inertia1/models/backbones/patchtst/: patchTST_accel.py
inertia1/scripts/: eval_nhanes_labels.py
inertia1/utils/: params.py
scripts/disease_detection/: eval_disease.sh  make_placeholder_data.py
scripts/eval/: eval_motion.sh
scripts/preprocessing/: README.md
scripts/preprocessing/docs/: DATASET_AUDIT_PLAYBOOK.md  DATASET_AUDIT_PLAYBOOK_GAIT.md  daphnet_fog_audit_notes.md
scripts/preprocessing/fog/: daphnet_fog.py  odayfog.py
scripts/preprocessing/har/: har70plus.py  harth.py  hhar.py  mhealth.py  opportunity.py  pamap2.py  recofit.py  wear_dataset.py  wisdm.py
scripts/pretrain/: pretrain_ar_transformer.sh  pretrain_patchtst.sh
