[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-fm"
version = "0.1.0"
description = "A taste of our motion foundation-model pipeline: SSL pretraining (AR-Transformer, PatchTST) on accelerometry, plus HAR/FoG and patient-level disease-detection evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  # Core
  "numpy==1.26.4",
  "pyyaml>=6.0",

  # Torch stack
  "torch>=2.1",
  "pytorch-lightning>=2.2",

  # Data I/O
  "pandas>=2.0",
  "pyarrow>=12.0",

  # Utilities
  "tqdm>=4.66",

  # Evaluation metrics + plots (downstream eval)
  "scikit-learn>=1.3",
  "matplotlib>=3.7",

  # Signal preprocessing (scripts/preprocessing)
  "scipy>=1.10",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
dev = [
  "ruff>=0.5",
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["inertia1"]

[tool.setuptools.package-data]
# Ship YAML configs inside the installed package. (Evaluation splits are NOT
# shipped -- they are derived from non-redistributable datasets; regenerate
# them with inertia1/eval/motion_split_analysis.py.)
inertia1 = ["config/**/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
